--- a/config
+++ b/config
@@ -1,7 +1,8 @@
-stepNum 20000
-outputInterval 100
-DeltaT 0.0001
-numX 128
-numY 128
-Re 100
-withIC 1
+stepNum                 1000
+outputInterval          100
+DeltaT                  0.001
+numX                    128
+numY                    128
+Re                      100
+withIC                  0
+convergenceThreshold    2e-4
