add test data (test_02)

--- a/test_01/config
+++ b/test_01/config
@@ -1,4 +1,4 @@
-caseName                test
+caseName                test_01
 stepNum                 100
 outputInterval          10
 DeltaT                  0.001
